# ndk

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: android_test.sh  emulator.yml  publish.yml  rust.yml
android-build-tools/: Cargo.toml
android-build-tools/src/: cargo.rs  config.rs  lib.rs
android-examples/: Cargo.toml
android-examples/examples/: hello_world.rs
android-glue/: Cargo.toml
android-glue/src/: lib.rs
android-ndk/: Cargo.toml
android-ndk-sys/: Cargo.toml  build.rs  generate_bindings.sh
android-ndk-sys/src/: android_native_app_glue.rs  ffi_armv7.rs  ffi_x86_64.rs  lib.rs  native_app_glue.rs
android-ndk/.cargo/: config
android-ndk/src/: android_app.rs  asset.rs  configuration.rs  event.rs  input_queue.rs  lib.rs  looper.rs  native_activity.rs  native_window.rs  queue.rs
android-sys/: Cargo.toml  build.rs
cargo-apk/: CHANGELOG.md  Cargo.toml  README.md
cargo-apk/src/: apk.rs  error.rs  lib.rs  main.rs  manifest.rs
ci/: install.sh  script.sh
jni-bindgen/: Cargo.toml
jni-bindgen/src/: lib.rs
ndk/: CHANGELOG.md  Cargo.toml
ndk-build/: CHANGELOG.md  Cargo.toml
ndk-build/src/: apk.rs  cargo.rs  config.rs  dylibs.rs  error.rs  lib.rs  manifest.rs  ndk.rs  readelf.rs  target.rs
ndk-context/: CHANGELOG.md  Cargo.toml  README.md
ndk-context/src/: lib.rs
ndk-examples/: Cargo.toml  README.md
ndk-examples/examples/: camera.rs  hello_world.rs  jni_audio.rs  looper.rs
ndk-glue/: CHANGELOG.md  Cargo.toml  README.md
ndk-glue/src/: lib.rs
ndk-macro/: CHANGELOG.md  Cargo.toml  README.md
ndk-macro/src/: expand.rs  helper.rs  lib.rs  parse.rs
ndk-macro/src/expand/: backtrace.rs  logger.rs
ndk-macro/src/parse/: backtrace.rs  logger.rs
ndk-sys/: CHANGELOG.md  Cargo.toml  generate_bindings.sh  wrapper.h
ndk-sys/src/: ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  ffi_x86_64.rs  lib.rs
ndk/src/: aaudio.rs  api_level.rs  asset.rs  audio.rs  bitmap.rs  choreographer.rs  configuration.rs  data_space.rs  event.rs  font.rs  hardware_buffer.rs  hardware_buffer_format.rs  input_queue.rs  lib.rs  looper.rs  media_error.rs  midi.rs  native_activity.rs  native_window.rs  performance_hint.rs  permission_manager.rs  posix.rs  surface_control.rs  surface_texture.rs  sync.rs  system_properties.rs  thermal.rs  trace.rs  utils.rs
ndk/src/camera/: metadata.rs  mod.rs  tags.rs
ndk/src/media/: error.rs  image_reader.rs  media_codec.rs  media_codec_crypto.rs  media_extractor.rs  media_format.rs  mod.rs
ndk/src/midi/: mod.rs  safe.rs
ndk/src/surface_control/: input_receiver.rs
