[package]
name = "android-ndk-sys"
version = "0.1.2"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"
description = "FFI bindings for the Android NDK"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "../README.md"

documentation = "https://docs.rs/android-ndk-sys"
homepage = "https://github.com/mb64/android-ndk-rs"
repository = "https://github.com/mb64/android-ndk-rs"

include = [
    "src/*",
    "Cargo.toml",
]

[features]
default = []
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
