[package]
name = "android-ndk"
version = "0.0.6"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings to the Android NDK"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "../README.md"

documentation = "https://docs.rs/android-ndk"
homepage = "https://github.com/mb64/android-ndk-rs"
repository = "https://github.com/mb64/android-ndk-rs"

include = [
    "src/*",
    "Cargo.toml",
]

[features]
default = ["native_app_glue"]
rustdoc = ["ffi/rustdoc"]
native_app_glue = []

[package.metadata.docs.rs]
features = ["rustdoc"]

[dependencies]
num_enum = "0.2"
jni = "0.13.1"

[dependencies.ffi]
package = "android-ndk-sys"
path = "../android-ndk-sys"
version = "0.2"
