[package]
name = "cargo-apk"
version = "0.9.6"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Helps cargo build APKs"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/cargo-apk"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"
rust-version = "1.60"

[dependencies]
anyhow = "1.0.57"
cargo-subcommand = "0.10"
clap = { version = "4", features = ["derive"] }
dunce = "1"
env_logger = "0.9"
log = "0.4"
ndk-build = { path = "../ndk-build", version = "0.9.0" }
serde = "1"
thiserror = "1"
toml = "0.5"
