[package]
name = "ndk-build"
version = "0.8.0"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "Utilities for building Android binaries"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/ndk-build"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"
rust-version = "1.60"

[dependencies]
dirs = "4"
dunce = "1"
quick-xml = { version = "0.26", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
which = "4"
