[package]
name = "ndk-examples"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.18.0"
libc = "0.2"
log = "0.4.14"
ndk = { path = "../ndk", features = ["trace"] }
ndk-glue = { path = "../ndk-glue", features = ["logger"] }

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "jni_audio"
crate-type = ["cdylib"]

[[example]]
name = "looper"
crate-type = ["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 29
