[package]
name = "ndk-examples"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20"
libc = "0.2"
log = "0.4.14"
ndk = { version = "0.7", features = ["api-level-23"] }
ndk-context = { path = "../ndk-context" }
ndk-glue = { version = "0.7", features = ["logger"] }

# The examples currently use ndk-glue which itself exposes types
# from the ndk crate and so we need to force a consistent
# choice to use the local `ndk` implementation
[patch.crates-io]
ndk = { path = "../ndk" }

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "jni_audio"
crate-type = ["cdylib"]

[[example]]
name = "looper"
crate-type = ["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 29
