[package]
name = "ndk-sys"
version = "0.2.2"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "FFI bindings for the Android NDK"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "../README.md"
documentation = "https://docs.rs/android-ndk-sys"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"

[features]
test = []
aaudio = []
bitmap = []
media = []

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
