[package]
name = "ndk-sys"
version = "0.4.0"
authors = ["The Rust Windowing contributors"]
edition = "2018"
description = "FFI bindings for the Android NDK"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "../README.md"
documentation = "https://docs.rs/android-ndk-sys"
homepage = "https://github.com/rust-windowing/android-ndk-rs"
repository = "https://github.com/rust-windowing/android-ndk-rs"

[dependencies]
jni-sys = "0.3.0"

[features]
test = []
audio = []
bitmap = []
media = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
