[package]
name = "ndk"
version = "0.8.0"
authors = ["The Rust Mobile contributors"]
edition = "2021"
description = "Safe Rust bindings to the Android NDK"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk"]
readme = "../README.md"
documentation = "https://docs.rs/ndk"
homepage = "https://github.com/rust-mobile/ndk"
repository = "https://github.com/rust-mobile/ndk"
rust-version = "1.66"

[features]
default = ["rwh_06"]
all = ["audio", "bitmap","media", "api-level-31", "rwh_04", "rwh_05", "rwh_06"]

audio = ["ffi/audio", "api-level-26"]
bitmap = ["ffi/bitmap"]
media = ["ffi/media"]
sync = ["ffi/sync", "api-level-26"]

api-level-23 = []
api-level-24 = ["api-level-23"]
api-level-25 = ["api-level-24"]
api-level-26 = ["api-level-25"]
api-level-27 = ["api-level-26"]
api-level-28 = ["api-level-27"]
api-level-29 = ["api-level-28"]
api-level-30 = ["api-level-29"]
api-level-31 = ["api-level-30"]

test = ["ffi/test", "jni", "all"]

[dependencies]
bitflags = "2.0.0"
jni-sys = "0.3.0"
log = "0.4"
num_enum = "0.7"
rwh_04 = { package = "raw-window-handle", version = "0.4", optional = true }
rwh_05 = { package = "raw-window-handle", version = "0.5", optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6", optional = true }
thiserror = "1.0.23"

[dependencies.jni]
version = "0.21"
optional = true

[dependencies.ffi]
package = "ndk-sys"
path = "../ndk-sys"
version = "0.5.0"

[dev-dependencies]
# Only for use in documentation and doc-tests
libc = "0.2"

[package.metadata.docs.rs]
features = ["jni", "all"]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]
